aws/cfn/cluster/template.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: |
  setup ECS cluster

Parameters:
  NetworkingStack:
    Type: String
    Description: This is base network stack like vpc, subnet
  DomainName:
    Type: String
  HostedZoneId:
    Type: String    
  FEHealthCheckIntervalSeconds: 
    Type: Number
    Default: 15
  FEHealthCheckPath:
    Type: String
    Default: /
  FEHealthCheckPort: 
    Type: String
    Default: 80
  FEHealthCheckProtocol: 
    Type: String
    Default: HTTP
  FEHealthCheckTimeoutSeconds: 
    Type: Number
    Default: 5
  FEHealthyThresholdCount: 
    Type: Number
    Default: 5
  FEPort: 
    Type: Number
    Default: 3000
  FEUnhealthyThresholdCount:
    Type: Number
    Default: 2  
  BEHealthCheckIntervalSeconds: 
    Type: Number
    Default: 15
  BEHealthCheckPath:
    Type: String
    Default: /api/health_check
  BEHealthCheckPort: 
    Type: String
    Default: 80
  BEHealthCheckProtocol: 
    Type: String
    Default: HTTP
  BEHealthCheckTimeoutSeconds: 
    Type: Number
    Default: 5
  BEHealthyThresholdCount: 
    Type: Number
    Default: 5
  BEPort: 
    Type: Number
    Default: 4567  
  BEUnhealthyThresholdCount:
    Type: Number
    Default: 2
Resources:
  FargateCluster:
    Type: AWS::ECS::Cluster
    Properties:
      ClusterName: !Sub "${AWS::StackName}FargateCluster"
      CapacityProviders: 
        - FARGATE
      ClusterSettings:
        - Name: containerInsights
          Value: enabled
      Configuration:  
        ExecuteCommandConfiguration: 
          Logging: DEFAULT
      ServiceConnectDefaults:
        Namespace: cruddur
  ALBSslCert:
    Type: AWS::CertificateManager::Certificate
    Properties:
      DomainName: !Ref DomainName
      ValidationMethod: DNS
      DomainValidationOptions:
        - DomainName: !Ref DomainName
          HostedZoneId: !Ref HostedZoneId 
  ALB:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: !Sub '${AWS::StackName}ALB'
      Type: application
      IpAddressType: ipv4
      LoadBalancerAttributes:
        - Key: routing.http2.enabled
          Value: true
        - Key: routing.http.preserve_host_header.enabled
          Value: false
        - Key: routing.http.xff_header_processing.mode
          Value: append
        - Key: deletion_protection.enabled
          Value: false
        - Key: load_balancing.cross_zone.enabled
          Value: true
        - Key: access_logs.s3.enabled
          Value: false 
        # if required to turn on logs
        # - Key: access_logs.s3.bucket
        #   Value: bucket-name
        # - Key: access_logs.s3.prefix
        #   Value: ""
      Scheme: internet-facing
      Subnets: 
        Fn::Split:
          - ","
          - Fn::ImportValue:
              !Sub '${NetworkingStack}PubSubnets'
      SecurityGroups: 
        - !GetAtt ALBSG.GroupId
  HTTPListener:    
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - Type: redirect
          RedirectConfig:
           Protocol: "HTTPS"
           Port: 443
           Host: "#{host}"
           Path: "/#{path}"
           Query: "#{query}"
           StatusCode: "HTTP_301"
      LoadBalancerArn: !Ref ALB
      Port: 80
      Protocol: "HTTP"
  HTTPSListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref FrontendTG
      Certificates:
        - CertificateArn: !Ref ALBSslCert
      LoadBalancerArn: !Ref ALB
      Port: '443'
      Protocol: HTTPS
  ALBSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub '${AWS::StackName}AlbSG'
      GroupDescription: Internet facing SG for cruddur ALB
      VpcId: 
        Fn::ImportValue:
          !Sub '${NetworkingStack}VpcId'
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0   
          Description: Public HTTP
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
          Description: Public HTTPS
        - IpProtocol: tcp
          FromPort: !Ref FEPort
          ToPort: !Ref FEPort
          CidrIp: 0.0.0.0/0
          Description: Public Frontend
        - IpProtocol: tcp
          FromPort: !Ref BEPort
          ToPort: !Ref BEPort
          CidrIp: 0.0.0.0/0
          Description: Public Backend    
  ApiALBListenerRule:
    Type: AWS::ElasticLoadBalancingV2::ListenerRule
    Properties:   
      Conditions:
        - Field: host-header
          HostHeaderConfig:
            Values: 
              - api.cruddur.in
      Actions:
        - Type: forward
          TargetGroupArn: !Ref BackendTG
      ListenerArn: !Ref HTTPSListener
      Priority: 1
  ServiceSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub '${AWS::StackName}ServiceSG'
      GroupDescription: Internet facing SG for ECS Service
      VpcId: 
        Fn::ImportValue:
          !Sub '${NetworkingStack}VpcId'
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: !Ref FEPort
          ToPort: !Ref FEPort
          SourceSecurityGroupId: !GetAtt ALBSG.GroupId
          Description: Service FE from ALB   
        - IpProtocol: tcp
          FromPort: !Ref BEPort
          ToPort: !Ref BEPort
          SourceSecurityGroupId: !GetAtt ALBSG.GroupId
          Description: Service BE from ALB  
  FrontendTG:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties: 
      HealthCheckEnabled: true
      HealthCheckIntervalSeconds: !Ref FEHealthCheckIntervalSeconds
      HealthCheckPath: !Ref FEHealthCheckPath
      HealthCheckPort: !Ref FEHealthCheckPort
      HealthCheckProtocol: !Ref FEHealthCheckProtocol
      HealthCheckTimeoutSeconds: !Ref FEHealthCheckTimeoutSeconds
      HealthyThresholdCount: !Ref FEHealthyThresholdCount
      IpAddressType: ipv4
      Matcher: 
        HttpCode: 200
      Port: !Ref FEPort
      Protocol: HTTP
      ProtocolVersion: HTTP1
      Tags: 
        - Key: target-grp-name
          Value: frontend
      TargetGroupAttributes: 
        - Key: deregistration_delay.timeout_seconds
          Value: 0
      TargetType: ip
      UnhealthyThresholdCount: !Ref FEUnhealthyThresholdCount
      VpcId: 
        Fn::ImportValue:
          !Sub '${NetworkingStack}VpcId'
  BackendTG:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties: 
      HealthCheckEnabled: true
      HealthCheckIntervalSeconds: !Ref BEHealthCheckIntervalSeconds
      HealthCheckPath: !Ref BEHealthCheckPath
      HealthCheckPort: !Ref BEHealthCheckPort
      HealthCheckProtocol: !Ref BEHealthCheckProtocol
      HealthCheckTimeoutSeconds: !Ref BEHealthCheckTimeoutSeconds
      HealthyThresholdCount: !Ref BEHealthyThresholdCount
      IpAddressType: ipv4
      Matcher: 
        HttpCode: 200
      Port: !Ref BEPort
      Protocol: HTTP
      ProtocolVersion: HTTP1
      Tags: 
        - Key: target-grp-name
          Value: backend
      TargetGroupAttributes: 
        - Key: deregistration_delay.timeout_seconds
          Value: 0
      TargetType: ip
      UnhealthyThresholdCount: !Ref BEUnhealthyThresholdCount
      VpcId: 
        Fn::ImportValue:
          !Sub '${NetworkingStack}VpcId'
Outputs:        
  ClusterName:
    Value: !Ref FargateCluster
    Export:
      Name: !Sub '${AWS::StackName}ClusterName'
  ALBSecurityGrpId:
    Value: !GetAtt  ALBSG.GroupId
    Export:
      Name: !Sub '${AWS::StackName}ALBSecGrpId'
  ServiceSecurityGrpId:
    Value: !GetAtt ServiceSG.GroupId
    Export:
      Name: !Sub '${AWS::StackName}ServiceSecurityGrpId'    
  FrontendTGArn:
    Value: !Ref FrontendTG
    Export:
      Name: !Sub '${AWS::StackName}FrontEndTGArn'
  BackendTGArn:
    Value: !Ref BackendTG
    Export:
      Name: !Sub '${AWS::StackName}BackendTGArn'
